--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,8 @@
 :root{
-    --Primary-color: rgb(233, 233, 233);
+    --Primary-color: rgb(255, 254, 254);
     --Secondary-color: rgb(255, 210, 86);
     --text-primary: rgb(14, 12, 20);
+    --overlay-color: rgba(14, 12, 20, 0.7);
 }
 
 * {
@@ -11,11 +12,10 @@
 }
   
 body {
-    background: var(--Very-Light-Gray);
-    color: var(--Very-Dark-Blue);
+    background: var(--Primary-color);
+    color: var(--text-primary);
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px; 
-    text-align: center;
 }
 
 a {
@@ -28,3 +28,51 @@ li {
     list-style: none;
     margin: auto 1.2rem; 
 }
+
+span .logo{
+    color: var(--text-primary);
+    margin-left: 1rem;
+}
+
+.btn{
+    background: var(--Secondary-color);
+    color: var(--text-primary);
+    padding: 0.7rem 1rem;
+    margin: 2rem;
+}
+
+header{
+    background: url(../assets/image-header.jpg) no-repeat center center/cover;
+    color: var(--Primary-color);
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    z-index: -2;
+}
+
+header::before{
+    content: '';
+    background: var(--overlay-color);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+}
+
+header #head{
+    width: 100%;
+    height: 90%;
+}
+
+header #head > div{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+
