--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@
     --Secondary-color: rgb(255, 210, 86);
     --text-primary: rgb(14, 12, 20);
     --overlay-color: rgba(14, 12, 20, 0.7);
+    --transparent-color: rgba(94, 93, 97, 0.7);
 }
 
 * {
@@ -29,8 +30,22 @@ li {
     margin: auto 1.2rem; 
 }
 
-span .logo{
-    color: var(--text-primary);
+p{
+    line-height: 30px;
+}
+
+img{
+    width: 300px;
+    height: auto;
+}
+
+i{
+    margin-left: 2rem;
+    cursor: pointer;
+}
+
+span.logo{
+    color: var(--Secondary-color);
     margin-left: 1rem;
 }
 
@@ -38,41 +53,447 @@ span .logo{
     background: var(--Secondary-color);
     color: var(--text-primary);
     padding: 0.7rem 1rem;
-    margin: 2rem;
+    margin: 2rem 0;
+    cursor: pointer;
+    transition: all 0.5s ease-in-out;
+}
+
+.btn:hover, .fa:hover{
+    opacity: 0.9;
+}
+
+div.logo{
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    z-index: 2;
 }
 
 header{
-    background: url(../assets/image-header.jpg) no-repeat center center/cover;
+    background: var(--overlay-color);
     color: var(--Primary-color);
     width: 100%;
     height: 100vh;
     position: relative;
-    z-index: -2;
 }
 
-header::before{
+header:before{
+    background: url(../assets/image-header.jpg) no-repeat center center/cover;
     content: '';
-    background: var(--overlay-color);
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
     z-index: -1;
+    opacity: 0.9;
 }
 
-header #head{
+header .nav-links{
     width: 100%;
-    height: 90%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    visibility: hidden;
+    transition: all 0.4s ease;
+    pointer-events: none;
 }
 
-header #head > div{
+header .nav-links > div{
+    background: rgba(26, 25, 25, 0.9);
+    min-width: 300vw;
+    min-height: 300vw;
+    border-radius: 50%;
+    display: flex;
+    flex: none;
+    justify-content: center;
+    align-items: center;
+    transform: scale(0);
+    transition: all 0.4s ease;
+}
+
+header .nav-links > div ul{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 70vh;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    opacity: 0;
+    transition: all 0.4s ease 0.1s;
+}
+
+header .nav-links > div ul li{
+    border-bottom: 0.1px solid var(--Secondary-color);
+    width: 100%;
+    margin: 0;
+}
+
+header .nav-links > div ul li:last-child{
+    border-bottom: none;
+}
+
+header .nav-links > div ul li a{
+    padding: 2rem 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: visible;
+}
+
+header .nav-links > div ul li:hover{
+    background: rgba(51, 51, 50, 0.8);
+    border: none;
+}
+
+header .menu-wrap{
+    background: var(--transparent-color);
+    width: 50px;
+    height: 50px;
+    position: fixed;
+    top: 5px;
+    right: 0;
+    padding: 0.5rem;
+    cursor: pointer;
+    z-index: 1;
+}
+
+header .menu-wrap .toggler{
+    position: absolute;
+    top: 0;
+    left: 5px;
+    width: 50px;
+    height: 50px;
+    opacity: 0;
+    z-index: 3;
+    cursor: pointer;
+}
+
+header .menu-wrap .toggler:checked + .lines > div{
+    transform: rotate(135deg);
+}
+
+header .menu-wrap .toggler:checked:hover + .lines > div{
+    transform: rotate(225deg);
+}
+
+header .menu-wrap .toggler:checked:hover + .lines .last-line{
+    transform: scale(0);
+}
+
+header .menu-wrap .toggler:checked + .lines .first-line::before,
+header .menu-wrap .toggler:checked + .lines .first-line::after{
+    top: 0;
+    transform: rotate(90deg);
+}
+
+header .menu-wrap .toggler:checked + .lines .last-line{
+    transform: scale(0);
+}
+
+header .menu-wrap .toggler:checked ~ .nav-links{
+    visibility: visible;
+}
+
+header .menu-wrap .toggler:checked ~ .nav-links > div{
+    transform: scale(1);
+}
+
+header .menu-wrap .toggler:checked ~ .nav-links > div ul{
+    opacity: 1;
+}
+
+header .menu-wrap > div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+header .menu-wrap .first-line{
+    width: 100%;
+    height: 10%;
+    background: var(--Primary-color);
+    position: relative;
+    transition: all 0.5s ease;
+    z-index: 1;
+}
+
+header .menu-wrap .last-line{
+    position: absolute;
+    top: 42px;
+    left: 8px;
+    width: 40%;
+    height: 8%;
+    background: var(--Primary-color);
+    transition: all 0.5s ease;
+}
+
+header .menu-wrap .first-line::before,
+header .menu-wrap .first-line::after{
+    content: '';
+    position: absolute;
+    top: -10px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--Primary-color);
+    transition: all 0.5s ease;
+    z-index: 1;
+}
+
+header .menu-wrap .first-line::after{
+    top: 10px;
+}
+
+#head{
+    width: 100%;
+    height: 100%;
+}
+
+#head > div{
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+    padding: 4rem;
+    margin: auto;
 }
 
+#head > div h1{
+    letter-spacing: 0.3rem;
+    font-size: 2rem;
+}
 
+#head > div > div{
+    width: 100%;
+    margin-left: 2rem;
+    margin-top: 3rem;
+    position: relative;
+}
+
+#head > div > div .fa{
+    position: absolute;
+    top: 15%;
+    left: -80px;
+    color: var(--Secondary-color);
+}
+
+#head > div > div .fa-chevron-right{
+    left: 90%;
+}
+
+#head > div p{
+    width: 130px;
+    font-size: 1.2rem;
+    line-height: 1.7rem;
+}
+
+#section1 .section1{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: space-around;
+    padding: 3rem;
+    width: 80%;
+    margin: auto;
+}
+
+#section1 .box1{
+    background-color: var(--text-primary);
+    background: url(../assets/jessica-lewis-512224-unsplash.jpg) no-repeat center center/cover;
+    margin: auto;
+    width: 70%;
+    height: 100%;
+}
+
+#section1 .box1 img{
+    width: 100%;
+    height: 100%;
+}
+
+#section1 .box2{
+    grid-column: 2 / span 2;
+    margin: auto;
+    padding: 0 3rem;
+}
+
+#section1 .box2 h1{
+    margin-bottom: 2.5rem;
+    font-size: 2.5rem;
+}
+
+#section1 .box2 p{
+    line-height: 1.5rem;
+    margin-bottom: 2rem;
+}
+
+#section1 .box2 hr{
+    border: 1px solid var(--Secondary-color);
+    width: 50%;
+    margin-bottom: 2rem;
+}
+
+#section1 .box2 hr{
+    border: 1px solid var(--Secondary-color);
+    width: 50%;
+    margin-bottom: 2rem;
+}
+
+#section1 .box2 span{
+    font-size: 1.5rem;
+    letter-spacing: 2px;
+    margin: 0;
+}
+
+#section2{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 4rem auto;
+    margin-bottom: 1rem;
+}
+
+#section2 h2{
+    font-size: 2rem;
+}
+
+#section2 .section2{
+    width: 70%;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-content: center;
+    align-items: center;
+    margin: 3rem auto;
+    margin-bottom: 1rem;
+}
+
+#section2 .section2 div{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 3rem;
+    border: 1px solid rgba(136, 134, 134, 0.1);
+    transition: all 0.4s ease-in-out;
+}
+
+#section2 .section2 div:hover{
+    box-shadow: 0.1rem 0.1rem 5px rgba(238, 185, 10, 0.3),
+    -1px -1px 5px rgba(238, 185, 10, 0.7);
+}
+
+#section2 .section2 img{
+    width: 100%;
+}
+
+#alphabets{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 4rem;
+}
+
+#alphabets p{
+    margin: auto;
+    font-weight: bold;
+    font-size: 2.3rem;
+    text-transform: uppercase;
+    line-height: 70px;
+    letter-spacing: 10px;
+}
+
+#section3{
+    background: rgb(61, 58, 58);
+    color: var(--Primary-color);
+    width: 100%;
+    position: relative;
+}
+
+#section3 .fa{
+    position: absolute;
+    top: 50%;
+    left: 5%;
+}
+
+#section3 .fa-chevron-right{
+    left: 85%;
+}
+
+#section3 .section3{
+    width: 80%;
+    max-width: 650px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    padding: 2rem;
+}
+
+#section3 .section3 .box1{
+    width: 100px;
+    height: 100px;
+    margin-bottom: 3rem;
+}
+
+#section3 .section3 .box1 img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
+#section3 .section3 .box2 .p{
+    text-align: center;
+    margin: 4rem auto 1rem auto;
+}
+
+#section4{
+    background: var(--overlay-color);
+    color: var(--Primary-color);
+    position: relative;
+    padding: 2rem;
+}
+
+#section4::before{
+    content: '';
+    background: url(../assets/image-foot.jpg) no-repeat center center/cover;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
+#section4 .section4{
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: auto;
+}
+
+#section4 .section4 > div{
+    width: 60%;
+}
+
+#section4 .section4 > div .p{
+    font-weight: bold;
+    font-size: 1.4rem;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+}
+
+#section4 .section4 .btn{
+    width: 40%;
+    max-width: 200px;
+    text-align: center;
+}
