--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,10 +1,3 @@
-<<<<<<< HEAD
-=======
-header{
-    height: 80vh;
-}
-
->>>>>>> c3cc99a5ee7bb176a433ad949601202d6a694a3e
 #head > div > div{
     margin-left: 0;
 }
@@ -57,28 +50,18 @@ header{
     grid-template-columns: repeat(3, 1fr);
 }
 
-<<<<<<< HEAD
 #section3 .section3.active{
     right: 10%;
 }
 
-=======
->>>>>>> c3cc99a5ee7bb176a433ad949601202d6a694a3e
 
-
-
-
-
-
-
-
-@media screen and (max-width: 500px){
-<<<<<<< HEAD
+@media screen and (max-width: 480px){
     header{
         height: 80vh;
     }
-=======
->>>>>>> c3cc99a5ee7bb176a433ad949601202d6a694a3e
+    /* header .menu-wrap{
+        right: 25%;
+    } */
     #head > div h1,
     #section1 .box2 h1{
         font-size: 1.5rem;
@@ -103,12 +86,6 @@ header{
         margin: 0 auto 2rem auto;
     }
     #alphabets p{
-<<<<<<< HEAD
-        margin-top: 3rem;
-    }
-    #alphabets p{
-=======
->>>>>>> c3cc99a5ee7bb176a433ad949601202d6a694a3e
         font-size: 1.5rem;
         line-height: 40px;
         letter-spacing: 2px;
@@ -133,12 +110,8 @@ header{
     #section2 .section2 div{
         padding: 1rem;
     }
-<<<<<<< HEAD
     #section3 .section3.active{
-        right: 7%;
+        right: 5%;
     }
     
 }
-=======
-}
->>>>>>> c3cc99a5ee7bb176a433ad949601202d6a694a3e
