--- a/contact/contact.css
+++ b/contact/contact.css
@@ -270,6 +270,10 @@ textarea{
     text-align: right;
     padding: 3% 0%;
 }
+    footer img{
+        width: 50px;
+        height: auto;
+    }
 
 @media all and (max-width: 950px){
     .reach-us{
